more documatation added

--- a/manual/test.ipynb
+++ b/manual/test.ipynb
@@ -11,7 +11,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
+      "Populating the interactive namespace from numpy and matplotlib\n",
+      "warning in stationary: failed to import cython module: falling back to numpy\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Vendor:  Continuum Analytics, Inc.\n",
+      "Package: mkl\n",
+      "Message: trial mode expires in 23 days\n"
+     ]
+    },
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (cost.py, line 52)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"/home/javier/workspace/GitHub/GPyOpt/GPyOpt/core/task/cost.py\"\u001b[1;36m, line \u001b[1;32m52\u001b[0m\n\u001b[1;33m    m, _, dmdx, _= self.cost_model.predict_withGradients(x)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
