--- a/manual/GPyOpt_reference_manual.ipynb
+++ b/manual/GPyOpt_reference_manual.ipynb
@@ -51,7 +51,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
+      "Populating the interactive namespace from numpy and matplotlib\n",
+      "warning in stationary: failed to import cython module: falling back to numpy\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Vendor:  Continuum Analytics, Inc.\n",
+      "Package: mkl\n",
+      "Message: trial mode expires in 23 days\n"
      ]
     }
    ],
@@ -1186,7 +1196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
