more function documentation added

--- a/manual/GPyOpt_reference_manual.ipynb
+++ b/manual/GPyOpt_reference_manual.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -51,17 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n",
-      "warning in stationary: failed to import cython module: falling back to numpy\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Vendor:  Continuum Analytics, Inc.\n",
-      "Package: mkl\n",
-      "Message: trial mode expires in 23 days\n"
+      "Populating the interactive namespace from numpy and matplotlib\n"
      ]
     }
    ],
@@ -83,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -102,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -120,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
