added templates for models and acquisitions

--- a/manual/GPyOpt_creating_new_aquisitions.ipynb
+++ b/manual/GPyOpt_creating_new_aquisitions.ipynb
@@ -4,7 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating new acquisitions for GPyOpt"
+    "# Creating new acquisitions for GPyOpt\n",
+    "\n",
+    "### Written by Javier Gonzalez, University of Sheffield.\n",
+    "\n",
+    "## Reference Manual index\n",
+    "\n",
+    "*Last updated Friday, 11 Jun 2016.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can create and use your own aquisition functions in GPyOpt. To do it just complete the following template."
    ]
   },
   {
@@ -21,35 +34,59 @@
     "class AcquisitionNew(AcquisitionBase):\n",
     "    \n",
     "    \"\"\"\n",
-    "    Template to create a new GPyOPt acquisition function\n",
+    "    General template to create a new GPyOPt acquisition function\n",
     "\n",
     "    :param model: GPyOpt class of model\n",
     "    :param space: GPyOpt class of domain\n",
     "    :param optimizer: optimizer of the acquisition. Should be a GPyOpt optimizer\n",
     "    :param cost_withGradients: function that provides the evaluation cost and its gradients\n",
     "\n",
-    "    .. Note:: this computes the acquisition per unit of cost (contant bu default in GPyOpt)\n",
-    "\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self, model, space, optimizer, cost_withGradients=None,**kwargs):\n",
+    "    def __init__(self, model, space, optimizer, cost_withGradients=None, **kwargs):\n",
     "        self.optimizer = optimizer\n",
-    "        super(AcquisitionEI, self).__init__(model, space, optimizer)\n",
+    "        super(AcquisitionNew, self).__init__(model, space, optimizer)\n",
+    "        \n",
+    "        # --- UNCOMMENT ONE OF THE TWO NEXT BITS\n",
+    "             \n",
+    "        # 1) THIS ONE IF THE EVALUATION COSTS MAKES SENSE\n",
+    "        #\n",
+    "        # if cost_withGradients == None:\n",
+    "        #     self.cost_withGradients = constant_cost_withGradients\n",
+    "        # else:\n",
+    "        #     self.cost_withGradients = cost_withGradients \n",
     "\n",
-    "        if cost_withGradients == None:\n",
-    "            self.cost_withGradients = constant_cost_withGradients\n",
-    "        else:\n",
-    "            self.cost_withGradients = cost_withGradients \n",
+    "        # 2) THIS ONE IF THE EVALUATION COSTS DOES NOT MAKE SENSE\n",
+    "        #\n",
+    "        # if cost_withGradients == None:\n",
+    "        #     self.cost_withGradients = constant_cost_withGradients\n",
+    "        # else:\n",
+    "        #     print('LBC acquisition does now make sense with cost. Cost set to constant.')  \n",
+    "        #     self.cost_withGradients = constant_cost_withGradients\n",
+    "\n",
     "\n",
     "    def _compute_acq(self,x)\n",
-    "    \n",
-    "        # [... COMPUTE THE ACQUISITION HERE (to be maximized) ...]\n",
+    "        \n",
+    "        # --- DEFINE YOUR AQUISITION HERE (TO BE MAXIMIZED)\n",
+    "        #\n",
+    "        # Compute here the value of the new acquisition function. Remember that x is a 2D  numpy array  \n",
+    "        # with a point in the domanin in each row. f_acqu_x should be a column vector containing the \n",
+    "        # values of the acquisition at x.\n",
+    "        #\n",
+    "        \n",
     "        return f_acqu_x\n",
     "    \n",
     "    def _compute_acq_withGradients(self, x):\n",
     "        \n",
-    "        # [... COMPUTE THE ACQUISITION (to be maximized) WITH GRADIENTS HERE ...]\n",
-    "        # if gradients are not available this function is not needed\n",
+    "        # --- DEFINE YOUR AQUISITION (TO BE MAXIMIZED) AND ITS GRADIENT HERE HERE\n",
+    "        #\n",
+    "        # Compute here the value of the new acquisition function. Remember that x is a 2D  numpy array  \n",
+    "        # with a point in the domanin in each row. f_acqu_x should be a column vector containing the \n",
+    "        # values of the acquisition at x. df_acqu_x contains is each row the values of the gradient of the\n",
+    "        # acquisition at each point of x.\n",
+    "        #\n",
+    "        # NOTE: this function is optional. If note available the gradients will be approxiamted numerically.\n",
+    "        \n",
     "        return f_acqu_x, df_acqu_x\n",
     "            \n",
     "   \n",
@@ -70,7 +107,7 @@
     "        cost_x, cost_grad_x = self.cost_withGradients(x)\n",
     "        f_acq_cost = f_acqu/cost_x\n",
     "        df_acq_cost = (df_acqu*cost_x - f_acqu*cost_grad_x)/(cost_x**2)\n",
-    "        return -f_acq_cost*self.space.indicator_constrains(x), -df_acq_cost*self.space.indicator_constrains(x)\n"
+    "        return -f_acq_cost*self.space.indicator_constrains(x), -df_acq_cost*self.space.indicator_constrains(x)"
    ]
   }
  ],
