udated EI with the template

--- a/manual/GPyOpt_creating_new_aquisitions.ipynb
+++ b/manual/GPyOpt_creating_new_aquisitions.ipynb
@@ -43,6 +43,10 @@
     "\n",
     "    \"\"\"\n",
     "\n",
+    "    # --- Set this line to true if analytical gradients are available\n",
+    "    analytical_gradient_prediction = False\n",
+    "\n",
+    "    \n",
     "    def __init__(self, model, space, optimizer, cost_withGradients=None, **kwargs):\n",
     "        self.optimizer = optimizer\n",
     "        super(AcquisitionNew, self).__init__(model, space, optimizer)\n",
@@ -88,26 +92,7 @@
     "        # NOTE: this function is optional. If note available the gradients will be approxiamted numerically.\n",
     "        \n",
     "        return f_acqu_x, df_acqu_x\n",
-    "            \n",
-    "   \n",
-    "    def acquisition_function(self,x):\n",
-    "        \"\"\"\n",
-    "        New acquisition  in domain and with cost\n",
-    "        \"\"\"\n",
-    "        f_acqu = self._compute_acq(x)\n",
-    "        cost_x, _ = self.cost_withGradients(x)\n",
-    "        return -(f_acqu*self.space.indicator_constrains(x))/cost_x\n",
-    "    \n",
-    "\n",
-    "    def acquisition_function_withGradients(self, x):\n",
-    "        \"\"\"\n",
-    "        New acquisition and its derivative in domain and with cost\n",
-    "        \"\"\"\n",
-    "        f_acqu,df_acqu = self._compute_acq_withGradients(x)\n",
-    "        cost_x, cost_grad_x = self.cost_withGradients(x)\n",
-    "        f_acq_cost = f_acqu/cost_x\n",
-    "        df_acq_cost = (df_acqu*cost_x - f_acqu*cost_grad_x)/(cost_x**2)\n",
-    "        return -f_acq_cost*self.space.indicator_constrains(x), -df_acq_cost*self.space.indicator_constrains(x)"
+    "            \n"
    ]
   }
  ],
