--- a/manual/GPyOPt_creating_new_models.ipynb
+++ b/manual/GPyOPt_creating_new_models.ipynb
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Copyright (c) 2016, the GPyOpt Authors\n",
     "# Licensed under the BSD 3-clause license (see LICENSE.txt)\n",
     "\n",
-    "from GPyOpt.base import BOModel\n",
+    "from GPyOpt.models.base import BOModel\n",
     "import numpy as np\n",
     "\n",
     "class NewModel(BOModel):\n",
@@ -83,6 +83,7 @@
     "            # ---\n",
     "            # AUGMENT THE MODEL HERE AND REUPDATE THE HIPER-PARAMETERS\n",
     "            # ---\n",
+    "            pass\n",
     "                 \n",
     "    def predict(self, X):\n",
     "        \"\"\"\n",
@@ -102,9 +103,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [python2test]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [python2test]"
   },
   "language_info": {
    "codemirror_mode": {
