--- a/manual/GPyOpt_creating_new_aquisitions.ipynb
+++ b/manual/GPyOpt_creating_new_aquisitions.ipynb
@@ -22,13 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from GPyOpt.base import AcquisitionBase\n",
+    "from GPyOpt.acquisitions.base import AcquisitionBase\n",
     "from GPyOpt.core.task.cost import constant_cost_withGradients\n",
     "    \n",
     "class AcquisitionNew(AcquisitionBase):\n",
@@ -69,7 +69,7 @@
     "        #     self.cost_withGradients = constant_cost_withGradients\n",
     "\n",
     "\n",
-    "    def _compute_acq(self,x)\n",
+    "    def _compute_acq(self,x):\n",
     "        \n",
     "        # --- DEFINE YOUR AQUISITION HERE (TO BE MAXIMIZED)\n",
     "        #\n",
@@ -98,9 +98,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [python2test]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [python2test]"
   },
   "language_info": {
    "codemirror_mode": {
