--- a/manual/GPyOpt_interface_spearmint.ipynb
+++ b/manual/GPyOpt_interface_spearmint.ipynb
@@ -8,53 +8,25 @@
    "source": [
     "# GPyOpt: interface with Spearmint\n",
     "\n",
-    "### Written by Javier Gonzalez, University of Sheffield.\n",
+    "### Written by Javier Gonzalez and Zhenwen Dai, University of Sheffield.\n",
     "\n",
     "\n",
     "*Last updated Monday, 14 March 2016.*"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe src=./files/data/config.json width=700 height=350></iframe>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "from IPython.display import HTML \n",
-    "HTML('<iframe src=./files/data/config.json width=700 height=350></iframe>')"
+    "To be announced."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [python2test]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [python2test]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -66,7 +38,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
