Implemented a method to suggest the next locations to allow for external evaluation of objective function

--- a/manual/index.ipynb
+++ b/manual/index.ipynb
@@ -32,6 +32,7 @@
     "    7. Input warping.\n",
     "    8. Using various cost evaluations functions.\n",
     "    9. Contextual variables.\n",
+    "    10. External objective evaluation.\n",
     "    \n",
     "6. **Currently supported models, acquisitions and initial designs**\n",
     "    1. Supported initial designs.\n",
@@ -139,9 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### 5.3 Mixing different types of variables\n",
     "In GPyOpt you can easily combine different types of variables in the optimization. Currently you can use discrete an continuous variables. The way GPyOpt handles discrete variables is by marginally optimizing the acquisition functions over combinations of feasible values. This may slow down the optimization if many discrete variables are used but it avoids rounding errors. See the notebook entitled [GPyOpt: mixing different types of variables](./GPyOpt_mixed_domain.ipynb) for further details. "
@@ -207,6 +206,20 @@
    "metadata": {},
    "source": [
     "During the optimization phase, you may want to fix the value of some of the variables. These variables are called context as they are part of the objective but are fixed when the aquisition is optimized, you can learn how to use them in [this](GPyOpt_context.ipynb) notebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.10 External objective evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you cannot define your objective function in Python, you have an option of evaluating it externally, and calling GPyOpt to suggest the next locations to evaluate. This approach is illustrated [here](GPyOpt_external_objective_evaluation.ipynb)."
    ]
   },
   {
@@ -286,9 +299,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
