--- a/_posts/2017-10-20-release-1.2.0.md
+++ b/_posts/2017-10-20-release-1.2.0.md
@@ -1,22 +1,23 @@
 ---
 layout: post
-title: GPyOpt elease 1.2.0
+title: GPyOpt release 1.2.0
 subtitle: New GPyOpt release is out.
 ---
 
-We are happy to announce that we have just pushed a new GPyOpt release to the devel and master branches (also updated the pip version). 
+We are happy to announce that we have just pushed a new GPyOpt release to the devel and master branches (also updated the pip version).
+
 This release contains all the features from the pre-release:
 
 - Optimization with context variables.
 - De-duplication management of evaluations.
 - New batch designs.
 - Refactoring and improvements in optimization routines.
-- Optimization with warped inputs
+- Optimization with warped inputs.
 - Compatibility with Python 3.
 - Significantly improvements in test coverage.
-- Various improvements and bug fixes
+- Various improvements and bug fixes.
 
-Also, we have added a new API that allows the user to control the evaluation/pralellization of the objective. Again, We would like to thank the many contributors that have helped to develop the new version of the library. 
+Also, we have added a new API that allows the user to control the evaluation/parallelization of the objective. Again, we would like to thank the many contributors that have helped to develop the new version of the library. 
 
 Thanks to everyone and enjoy the optimization!
 
