Updates to the library:
- Refactored initial design code
- Fixed bug in arguments manager
- Fixed bug in modular opt
- Added more tests

--- a/manual/GPyOpt_constrained_optimization.ipynb
+++ b/manual/GPyOpt_constrained_optimization.ipynb
@@ -216,7 +216,7 @@
     "from numpy.random import seed # fixed seed\n",
     "seed(123456)\n",
     "\n",
-    "initial_design = GPyOpt.util.general.initial_design('random', feasible_region, 10)"
+    "initial_design = GPyOpt.experiment_design.initial_design('random', feasible_region, 10)"
    ]
   },
   {
