--- a/manual/GPyOpt_modular_bayesian_optimization.ipynb
+++ b/manual/GPyOpt_modular_bayesian_optimization.ipynb
@@ -160,7 +160,7 @@
    },
    "outputs": [],
    "source": [
-    "initial_design = GPyOpt.util.general.initial_design('random', space, 5)"
+    "initial_design = GPyOpt.experiment_design.initial_design('random', space, 5)"
    ]
   },
   {
