--- a/manual/index.ipynb
+++ b/manual/index.ipynb
@@ -135,7 +135,7 @@
    "metadata": {},
    "source": [
     "### 5.2 Parallel Bayesian optimization\n",
-    "The main bottleneck when using Bayesian optimization is the cost of evaluating the objective function. In the notebook [GPyOpt: parallel Bayesian Optimization](GPyOpt_parallel_optimization.ipynb) you can learn more about the different parallel methods currently implemented in GPyOPt.  \n"
+    "The main bottleneck when using Bayesian optimization is the cost of evaluating the objective function. In the notebook [GPyOpt: parallel Bayesian Optimization](GPyOpt_parallel_optimization.ipynb) you can learn more about the different parallel methods currently implemented in GPyOpt.  \n"
    ]
   },
   {
@@ -254,7 +254,7 @@
     "- Standard GPs (with MLE and HMC inference)\n",
     "- Sparse GPs\n",
     "- Warperd GPs (both for the input and the output)\n",
-    "- Random Forrests[\n",
+    "- Random Forrests\n",
     "\n",
     "On top of this, if you want to implement your own model you can learn how to that in [this](GPyOpt_creating_new_models.ipynb) notebook.\n"
    ]
@@ -299,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
